--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "bezhansalleh/filament-language-switch": "^1.0",
         "filament/filament": "^2.17",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "laraveldaily/laravel-invoices": "^3.2",
         "leandrocfe/filament-apex-charts": "^2.0",
         "stancl/tenancy": "^3.7"
     },
